kubernetes/core/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: repox
  labels:
    name: repox
    environment: production
