kubernetes/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repox-ingress
  namespace: repox
  annotations:
    kubernetes.io/ingress.class: "nginx"   
spec:
  rules:
  - host: ""     
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: repox-backend-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: repox-frontend-service
            port:
              number: 80
